--- a/catalog.html
+++ b/catalog.html
@@ -3,49 +3,56 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nerds каталог</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="main_header">
 		<div class="container">
-			<nav>
-				<img src="img/nerds-logo.svg" alt="Nerds" width="160" height="65">
+			<nav class="main_navigation">
+				<a href="index.html">
+					<img src="img/nerds-logo.svg" alt="Nerds" width="160" height="65">
+				</a>
 				<ul class="site_navigation">
 					<li class="navigation_item"><a href="#">Студия</a></li>
 					<li class="navigation_item"><a href="#">Клиенты</a></li>
-					<li class="navigation_item"><a href="#">Магазин</a></li>
+					<li class="navigation_item navigation_item_current"><a href="#">Магазин</a></li>
 					<li class="navigation_item"><a href="#">Контакты</a></li>
 				</ul>
 				<ul class="user_navigation">
 					<li class="basket"><a href="#">Корзина</a></li>
 				</ul>
 			</nav>
-			<h1>Магазин готовых шаблонов</h1>
+			<h1 class="catalog_title">Магазин готовых шаблонов</h1>
 		</div>
 	</header>
 
-	<main>
+	<main class="catalog_site">
 		<div class="container">
 			<section class="filters">
 				<form class="filter" action="#" method="POST">
-
 					<div class="filter_range">
-						<span>Стоимость:</span>
-						<div class="scale">
-							<div class="bar"></div>
-							<div class="range_roller_min"></div>
-							<div class="range_roller_max"></div>
+						<span class="filter_range_title">Стоимость:</span>
+						<div class="range_controls">
+							<div class="scale">
+								<div class="bar"></div>
+								<div class="range_roller range_roller_min"></div>
+								<div class="range_roller range_roller_max"></div>
+							</div>
 						</div>
-						<label>От
-							<input class="min_price" type="text" name="min_price" value="0">
-						</label>
-						<label>До
-							<input class="max_price" type="text" name="max_price" value="15000">
-						</label>
+						<div class="price_controls">
+							<label class="min_price">От
+								<input type="text" name="min_price" value="0">
+							</label>
+							<label class="max_price">До
+								<input type="text" name="max_price" value="15000">
+							</label>
+						</div>
 					</div>
-
-					<fieldset class="grid">
+					<fieldset class="filter_grid">
 						<legend>Сетка:</legend>
-						<ul>
+						<ul class="grid_list">
 							<li>
 								<input class="visually_hidden" type="radio" name="grid" id="adaptive" value="adaptive" checked>
 								<label for="adaptive">Адаптивная</label>
@@ -56,158 +63,179 @@
 							</li>
 							<li>
 								<input class="visually_hidden" type="radio" name="grid" id="rubber" value="rubber">
-								<label for="rubber">Резиновая</label></li>
-							</ul>
-						</fieldset>
-
-						<fieldset class="filter_feature">
-							<legend>Особенности:</legend>
-							<ul>
-								<li>
-									<input class="visually_hidden" name="slider"  id="slider" type="checkbox" checked>
-									<label for="slider">Слайдер</label>
-								</li>
-								<li>
-									<input class="visually_hidden" name="feature_block"  id="feature_block" type="checkbox">
-									<label for="feature_block">Блок преимуществ</label>
-								</li>
-								<li>
-									<input class="visually_hidden" name="news"  id="news" type="checkbox" checked>
-									<label for="news">Новости</label>
-								</li>
-								<li>		
-									<input class="visually_hidden" name="gallery"  id="gallery" type="checkbox">
-									<label for="gallery">Галерея</label>
-								</li>
-								<li>
-									<input class="visually_hidden" name="basket"  id="basket" type="checkbox">
-									<label for="basket">Корзина</label>
-								</li>
-							</ul>
-							<button type="submit">Показать</button>
-						</fieldset>
-					</form>
-				</section>
-				<section class="catalog">
-					<div class="sorting">
-						<span>Сортировать</span>
-						<ul class="sorting_list">
-							<li>По цене</li>
-							<li>По типу</li>
-							<li>По названию</li>
+								<label for="rubber">Резиновая</label>
+							</li>
 						</ul>
-					</div>
-					<ul class="catalog_list">
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<p class="catalog_item_image">	
-										<img src="" alt="Sedona" width="360" height="576">
-									</p>
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">Sedona</h3>
-									<p class="catalog_description">Информационный сайт для туристов</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<img src="" alt="Pink" width="360" height="576">
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">Pink app</h3>
-									<p class="catalog_description">Продуктовый лендинг приложения для iOS и Android</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<img src="" alt="Barbershop" width="360" height="576">
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">Barbershop</h3>
-									<p class="catalog_description">Сайт салоны красоты.Для мужчин, да.</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<img src="" alt="Mishka" width="360" height="576">
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">Mishka</h3>
-									<p class="catalog_description">Интернет-магазин вязаных игрушек</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<img src="" alt="A Plus" width="360" height="576">
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">A Plus</h3>
-									<p class="catalog_description">Лендинг курсов повышения квалификации</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
-						<li class="catalog_item">
-							<a href="#">
-								<div class="catalog_item_header"></div>
-								<p class="catalog_item_image">	
-									<img src="" alt="Кваст" width="360" height="576">
-								</p>
-								<div class="catalog_item_hover">
-									<h3 class="catalog_title">Кваст</h3>
-									<p class="catalog_description">Промо-сайт производителя крафтового кваса</p>
-									<span class="btn catalog_btn">9 900руб.</span>
-								</div>
-							</a>
-						</li>
+					</fieldset>
+					<fieldset class="filter_feature">
+						<legend>Особенности:</legend>
+						<ul class="feature_list">
+							<li>
+								<input class="visually_hidden" name="slider"  id="slider" type="checkbox" checked>
+								<label for="slider">Слайдер</label>
+							</li>
+							<li>
+								<input class="visually_hidden" name="feature_block"  id="feature_block" type="checkbox">
+								<label for="feature_block">Блок преимуществ</label>
+							</li>
+							<li>
+								<input class="visually_hidden" name="news"  id="news" type="checkbox" checked>
+								<label for="news">Новости</label>
+							</li>
+							<li>		
+								<input class="visually_hidden" name="gallery"  id="gallery" type="checkbox">
+								<label for="gallery">Галерея</label>
+							</li>
+							<li>
+								<input class="visually_hidden" name="basket"  id="basket" type="checkbox">
+								<label for="basket">Корзина</label>
+							</li>
+						</ul>
+					</fieldset>
+					<button class="btn filter_btn" type="submit">Показать</button>
+				</form>
+			</section>
+
+			<section class="catalog">
+				<h2 class="visually_hidden">Каталог товаров</h2>
+				<div class="sorting">
+					<span class="sorting_title">Сортировать</span>
+					<ul class="sorting_list">
+						<li class="sorting_item sorting_item_current"><a href="#">По цене</a></li>
+						<li class="sorting_item"><a href="#">По типу</a></li>
+						<li class="sorting_item"><a href="#">По названию</a></li>
+						<li class="sorting_item arrow_down sorting_item_current"><a href="#"><span class="visually_hidden">По убыванию</span></a></li>
+						<li class="sorting_item arrow_up"><a href="#"><span class="visually_hidden">По возрастанию</span></a></li>
 					</ul>
-				</section>
+				</div>
+				<ul class="catalog_list">
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">
+								<img src="img/sedona.jpg" alt="Sedona" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">Sedona</h3>
+								<p class="catalog_description">Информационный сайт для туристов</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">	
+								<img src="img/pink.jpg" alt="Pink" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">Pink app</h3>
+								<p class="catalog_description">Продуктовый лендинг приложения для iOS и Android</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">	
+								<img src="img/barbershop.jpg" alt="Barbershop" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">Barbershop</h3>
+								<p class="catalog_description">Сайт салоны красоты. Для мужчин, да.</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">	
+								<img src="img/mishka.jpg" alt="Mishka" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">Mishka</h3>
+								<p class="catalog_description">Интернет-магазин вязаных игрушек</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">	
+								<img src="img/aplus.jpg" alt="A Plus" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">A Plus</h3>
+								<p class="catalog_description">Лендинг курсов повышения квалификации</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+					<li class="catalog_item">
+						<a href="#">
+							<div class="catalog_item_header"></div>
+							<p class="catalog_item_image">	
+								<img src="img/kvast.jpg" alt="Кваст" width="360" height="576">
+							</p>
+							<div class="catalog_item_hover">
+								<h3 class="catalog_item_title">Кваст</h3>
+								<p class="catalog_description">Промо-сайт производителя крафтового кваса</p>
+								<span class="btn catalog_btn">9 900руб.</span>
+							</div>
+						</a>
+					</li>
+				</ul>
 				<ul class="pagination_list">
 					<li class="pagination_item pagination_item_current"><a href="#">1</a></li>
 					<li class="pagination_item"><a href="#">2</a></li>
 					<li class="pagination_item"><a href="#">3</a></li>
-					<li class="pagination_item"><a href="#">Следующая</a></li>
+					<li class="pagination_item_btn"><a href="#">Следующая</a></li>
 				</ul>
+			</section>
+		</div>
+		<div class="map_container">
+			<div class="address">
+				<p class="address_title">Nёrds design studio</p>
+				<p class="address_location">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+				<p class="address_phone">тел. +7 (812) 275-75-75</p>
+				<a href="#" class="btn address_btn">Напишите нам</a>
 			</div>
-			<div class="map">
-				<img src="map.jpg" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-				<div class="address">
-					<p class="address_title">NЁRDS DESIGN STUDIO</p>
-					<p class="address_location">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-					<p class="address_phone">тел. +7 (812) 275-75-75</p>
-					<a href="#" class="btn address_btn">Напишите нам</a>
-				</div>
+			<div id="map" class="map"></div>
+		</div>
+	</main>
+	<footer class="main_footer">
+		<div class="container">
+			<ul class="social_list">
+				<li class="vk"><a href="#"><span class="visually_hidden">Вконтакте</span></a></li>
+				<li class="fb"><a href="#"><span class="visually_hidden">Фейсбук</span></a></li>
+				<li class="instagram"><a href="#"><span class="visually_hidden">Инстаграмм</span></a></li>
+			</ul>
+			<div class="promo_text">
+				<p>Давайте дружить, это выгодно!</p> 
+				<p>Скидка 10% для друзей из социальных сетей.</p>
 			</div>
-		</main>
-		<footer>
-			<div class="container">
-				<ul class="social-list">
-					<li class="vk">Вконтакте</li>
-					<li class="fb">Фейсбук</li>
-					<li class="instagram">Инстаграмм</li>
-				</ul>
-				<p>	
-					Давайте дружить, это выгодно! <span>Скидка 10% для друзей из социальных сетей.</span>
-				</p>
-			</div>
-		</footer>
-	</body>
-	</html>
+		</div>
+	</footer>
+	<div class="modal modal_feedback">
+		<p class="modal_title">Напишите нам</p>
+		<form class="modal_form" action="#" method="post">
+			<label class="modal_form_text">Ваше имя
+				<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
+			</label>
+			<label class="modal_form_text">Ваш e-mail:
+				<input type="text" name="mail" placeholder="Для отправки ответа">
+			</label>
+			<label>Текст письма
+				<textarea placeholder="В свободной форме"></textarea>
+			</label>
+			<button class="btn feedback_btn">Отправить</button>
+		</form>
+		<button class="button_close" type="button"><span class="visually_hidden">Закрыть</span></button>
+	</div>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMl3Ew47nKRJ433mXVu_5OuVijFPEBVmg"></script>
+	<script src="js/script.js"></script>
+</body>
+</html>
