--- a/index.html
+++ b/index.html
@@ -3,40 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nerds</title>
-	<!-- <link rel="stylesheet" href="css/style.css"> -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="main_header">
 		<div class="container">
-			<nav>
+			<nav class="main_navigation">
 				<img src="img/nerds-logo.svg" alt="Nerds" width="160" height="65">
 				<ul class="site_navigation">
 					<li class="navigation_item"><a href="#">Студия</a></li>
 					<li class="navigation_item"><a href="#">Клиенты</a></li>
-					<li class="navigation_item"><a href="#">Магазин</a></li>
+					<li class="navigation_item"><a href="catalog.html">Магазин</a></li>
 					<li class="navigation_item"><a href="#">Контакты</a></li>
 				</ul>
 				<ul class="user_navigation">
 					<li class="basket"><a href="#">Корзина</a></li>
 				</ul>
 			</nav>
-			<div class="sliders">
+			<div class="slider">
 				<input type="radio" name="toggle" id="btn_one" checked>
 				<input type="radio" name="toggle" id="btn_two">
 				<input type="radio" name="toggle" id="btn_three">
 				<div class="slide slide_one">
-					<h2>Долго, дорого, скрупулезно</h2>
-					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+					<h2>Долго, дорого,<br> скрупулезно</h2>
+					<p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
 					<a class="btn slider_btn" href="#">Узнать больше</a>
 				</div>
 				<div class="slide slide_two">
-					<h2>Любим математику как никто другой</h2>
-					<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+					<h2>Любим математику<br> как никто другой</h2>
+					<p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций.</p>
 					<a class="btn slider_btn" href="#">Узнать больше</a>
 				</div>
 				<div class="slide slide_three">
-					<h2>Долго, дорого, скрупулезно</h2>
-					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+					<h2>Только ночь,<br> только хардкор</h2>
+					<p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
 					<a class="btn slider_btn" href="#">Узнать больше</a>
 				</div>
 				<div class="slide_controls">
@@ -51,22 +53,28 @@
 	<main>
 		<div class="container">
 			<section class="offer">
-				<h2 class="visually-hidden">Наши предложения</h2>
+				<h2 class="visually_hidden">Наши предложения</h2>
 				<ul class="offer_list">
 					<li class="offer_item">
-						<div class="offer_img"></div>
+						<div class="offer_img">
+							<img src="img/illustration-1.jpg" alt="Веб-сайты" width="300" height="146">
+						</div>
 						<h3>Веб-сайты</h3>
 						<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 						<a class="btn offer_btn" href="#">Заказать</a>
 					</li>
 					<li class="offer_item">
-						<div class="offer_img"></div>
+						<div class="offer_img">
+							<img src="img/illustration-2.jpg" alt="Приложения" width="300" height="146">
+						</div>
 						<h3>Приложения</h3>
 						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
 						<a class="btn offer_btn" href="#">Заказать</a>
 					</li>
 					<li class="offer_item">
-						<div class="offer_img"></div>
+						<div class="offer_img">
+							<img src="img/illustration-3.jpg" alt="Презентации" width="300" height="146">
+						</div>
 						<h3>Презентации</h3>
 						<p>Вы даже не подозреваете, насколько вы изумительны!</p>
 						<a class="btn offer_btn" href="#">Заказать</a>
@@ -75,72 +83,85 @@
 			</section>
 
 			<section class="features">
-				<h2 class="visually-hidden">Наши особенности</h2>
+				<h2 class="visually_hidden">Наши особенности</h2>
 				<div class="about">
 					<h1>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h1>
 					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-					<p><span>Выполняем заказы на разработку:</span>
-						<ul class="about_list">
-							<li>Веб-сайтов любой сложности</li>
-							<li>Мобильных приложений для iOS и Android</li>
-							<li>Слайдшоу и видео для корпоративных презентаций</li>
-						</ul>
-					</p>
+					<span>Выполняем заказы на разработку:</span>
+					<ul class="about_list">
+						<li>Веб-сайтов любой сложности</li>
+						<li>Мобильных приложений для iOS и Android</li>
+						<li>Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
 				</div>
 				<div class="stat">
-					<img src="img/nerds-logo2.svg" alt="Nerds">
-					<p><span>с 2004 года Любим точность во всем:</span>
-						<ul class="stat_list">
-							<li><span class="percent">146%</span>Уровень самоотдачи</li>
-							<li><span class="percent">100%</span>Соблюдение сроков</li>
-							<li><span class="percent">50%</span>Минимальная предоплата</li>
-						</ul>
-					</p>
+					<img src="img/nerds-logo2.png" alt="Nerds" width="360" height="208">
+					<span class="stat_title">с 2004 года Любим точность во всем:</span>
+					<table class="table_stat">
+						<tr class="table_percent">
+							<td>146%</td>
+							<td>100%</td>
+							<td>50%</td>
+						</tr>
+						<tr class="table_info">
+							<td>Уровень самоотдачи</td>
+							<td>Соблюдение сроков</td>
+							<td>Минимальная предоплата</td>
+						</tr>
+					</table>
 				</div>
 			</section>
 
 			<section class="our_works">
-				<a href="#"><img src="academy.svg" alt="Html Academy"></a>
-				<a href="#"><img src="borodinsiki.svg" alt="Barbershop"></a>
-				<a href="#"><img src="pink.svg" alt="Pink"></a>
-				<a href="#"><img src="mishka.svg" alt="Mishka"></a>
+				<h2 class="visually_hidden">Наши работы</h2>
+				<a href="#"><img src="img/academy.png" alt="Html Academy" width="199" height="68"></a>
+				<a href="#"><img src="img/borodinsiki.png" alt="Barbershop" width="209" height="90"></a>
+				<a href="#"><img src="img/pink.png" alt="Pink" width="185" height="52"></a>
+				<a href="#"><img src="img/mishka.png" alt="Mishka" width="173" height="84"></a>
 			</section>
 		</div>
-		<div class="map">
-		<img src="map.jpg" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+		<div class="map_container">
 			<div class="address">
-				<p class="address_title">NЁRDS DESIGN STUDIO</p>
+				<p class="address_title">Nёrds design studio</p>
 				<p class="address_location">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				<p class="address_phone">тел. +7 (812) 275-75-75</p>
 				<a href="#" class="btn address_btn">Напишите нам</a>
 			</div>
+			<div id="map" class="map"></div>
 		</div>
 	</main>
 
-	<footer>
+	<footer class="main_footer">
 		<div class="container">
-			<ul class="social-list">
-				<li class="vk">Вконтакте</li>
-				<li class="fb">Фейсбук</li>
-				<li class="instagram">Инстаграмм</li>
+			<ul class="social_list">
+				<li class="vk"><a href="#"><span class="visually_hidden">Вконтакте</span></a></li>
+				<li class="fb"><a href="#"><span class="visually_hidden">Фейсбук</span></a></li>
+				<li class="instagram"><a href="#"><span class="visually_hidden">Инстаграмм</span></a></li>
 			</ul>
-			<p>	
-				Давайте дружить, это выгодно! <span>Скидка 10% для друзей из социальных сетей.</span>
-			</p>
+			<div class="promo_text">
+				<p>Давайте дружить, это выгодно!</p> 
+				<p>Скидка 10% для друзей из социальных сетей.</p>
+			</div>
 		</div>
 	</footer>
 
-	<div class="modal modal-feedback">
-		<p>Напишите нам</p>
-		<form action="#" method="get">
-			<label>Ваше имя
+	<div class="modal modal_feedback">
+		<p class="modal_title">Напишите нам</p>
+		<form class="modal_form" action="#" method="post">
+			<label class="modal_form_text">Ваше имя
 				<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
 			</label>
-			<label>Ваш e-mail:
+			<label class="modal_form_text">Ваш e-mail:
 				<input type="text" name="mail" placeholder="Для отправки ответа">
 			</label>
-			<textarea cols="30" rows="10" placeholder="В свободной форме"></textarea>
+			<label>Текст письма
+				<textarea placeholder="В свободной форме"></textarea>
+			</label>
+			<button class="btn feedback_btn">Отправить</button>
 		</form>
+		<button class="button_close" type="button"><span class="visually_hidden">Закрыть</span></button>
 	</div>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMl3Ew47nKRJ433mXVu_5OuVijFPEBVmg"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
