--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Nerds</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<header class="main_header">
@@ -99,9 +99,9 @@
 					<span class="stat_title">с 2004 года Любим точность во всем:</span>
 					<table class="table_stat">
 						<tr class="table_percent">
-							<td>146%</td>
-							<td>100%</td>
-							<td>50%</td>
+							<td>146<sup>%</sup></td>
+							<td>100<sup>%</sup></td>
+							<td>50<sup>%</sup></td>
 						</tr>
 						<tr class="table_info">
 							<td>Уровень самоотдачи</td>
@@ -114,10 +114,12 @@
 
 			<section class="our_works">
 				<h2 class="visually_hidden">Наши работы</h2>
-				<a href="#"><img src="img/academy.png" alt="Html Academy" width="199" height="68"></a>
-				<a href="#"><img src="img/borodinsiki.png" alt="Barbershop" width="209" height="90"></a>
-				<a href="#"><img src="img/pink.png" alt="Pink" width="185" height="52"></a>
-				<a href="#"><img src="img/mishka.png" alt="Mishka" width="173" height="84"></a>
+				<ul class="our_works_list">
+					<li><a href="#"><img src="img/academy.png" alt="Html Academy" width="199" height="68"></a></li>
+					<li><a href="#"><img src="img/borodinsiki.png" alt="Barbershop" width="209" height="90"></a></li>
+					<li><a href="#"><img src="img/pink.png" alt="Pink" width="185" height="52"></a></li>
+					<li><a href="#"><img src="img/mishka.png" alt="Mishka" width="173" height="84"></a></li>
+				</ul>
 			</section>
 		</div>
 		<div class="map_container">
