--- a/catalog.html
+++ b/catalog.html
@@ -236,6 +236,6 @@
 		<button class="button_close" type="button"><span class="visually_hidden">Закрыть</span></button>
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMl3Ew47nKRJ433mXVu_5OuVijFPEBVmg"></script>
-	<script src="js/script.js"></script>
+	<script src="js/script.min.js"></script>
 </body>
 </html>
